same think

2000-06-23-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now you can rotate text into cell
-Remove some duplicate functions or code (column_label->util_column_label
etc...)

2000-06-24-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Apply patch of Robert Wall <rwall@esatclear.ie> thanks a lot
Now you can goto cell or range directly.
KSpreadLocationEditWidget displays cell pos or range, and allows to
enter cell pos or range.
-Now you can write a table name with a space example "Table 1"
-Now you use press Key_Home you go to beginning of the row
and not at cell A1

2000-06-25-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now you can select with the mouse an area from bottom to top, from top
to bottom, from right to left and from left to right. Now it works.

2000-06-28-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new format :scientific format
Becareful, now format doesn't used prefix and postfix.
All format is creating into text : example for money :
12.5 => $ 12.5 but doesn't used prefix and postfix, so now currency symbol
is at the good place.
It's the same think for percent.

For the moment Date format doesn't work (sorry david).

2000-06-14 David Faure <faure@kde.org>
-----------------------------------------------------
Fixed tabbar colors (active table is not 'selected' -> using base())
Speed up KSpreadTextEditor::checkChoose(), might fix i18n problem as well

2000-06-30-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now kspread support Date
Date is saving in "international format", date can read in each language.

2000-07-01-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new format : Fraction format (1/2,1/4,1/8,1/16,1/10,1/100)