@@ -714,3 +714,5 @@ Date is saving in "international format", date can read in each language.
 2000-07-01-Montel laurent <montell@club-internet.fr>
 ----------------------------------------------------
 -Add new format : Fraction format (1/2,1/4,1/8,1/16,1/10,1/100)
+-Now you can move into an area when you press enter key, you move
+top to bottom and left to right.
